bug 21446 - text misaligned when editing nodes in service pane (r=mook)
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@19050 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/feathers/purplerain/chrome/skin/feathers.css
+++ b/feathers/purplerain/chrome/skin/feathers.css
@@ -841,8 +841,9 @@ sb-servicepane-node > vbox > hbox.servicepane-node-info > stack > hbox {
   -moz-box-align: center;
 }
 
+/* to make sure the child text element align properly */
 sb-servicepane-node textbox {
-  margin: 0px;
+  margin: -1px;
 }
 
 /* SERVICE PANE BADGES */
